fix collapsed navbar visibility

--- a/override.css
+++ b/override.css
@@ -20,6 +20,13 @@ html {
     width: 100vw;
 }
 
+.navbar-collapse {
+    z-index: 999;
+    background-color: #f8f9fa;;
+    width: 100vw;
+    padding: 0 50px;
+}
+
 .nav-link.active {
     color: #283FAF;
     border-bottom: 2px solid #283FAF;
@@ -32,7 +39,7 @@ aside {
 #sidebar {
     height: 90vh;
     width: 25vw;
-    background-color: white;
+    background-color: #f8f9fa;
     position: fixed;
     top: 10vh;
     left: 0;
@@ -114,7 +121,7 @@ h3 {
     bottom: 30px;
     left: 15vw;
     background-color: #283FAF;
-    color: #ffffff;
+    color: #f8f9fa;
 }
 
 main {
@@ -172,13 +179,13 @@ footer {
 #service-form-container > h1 {
     width: 100vw;
     background-color: #00205B;
-    color: #ffffff;
+    color: #f8f9fa;
     padding: 15px 0;
     text-align: center;
     position: fixed;
     top: 10vh;
     left: 0;
-    z-index: 999;
+    z-index: 990;
 }
 
 #request-instructions, #service-form-container > h2 {margin-top: 30vh;}
@@ -201,7 +208,7 @@ footer {
 #submit-report {
     width: 10%;
     background-color: #283FAF;
-    color: #ffffff;
+    color: #f8f9fa;
     position: relative;
     left: 90%;
 }
@@ -210,7 +217,7 @@ footer {
 
 .btn-primary {
     background-color: #283FAF;
-    color: #ffffff;
+    color: #f8f9fa;
 }
 
 .btn-secondary {
@@ -232,7 +239,7 @@ footer {
 
 .btn-light.active {
     background-color: #283FAF;
-    color: #ffffff;
+    color: #f8f9fa;
 }
 
 .btn-light.active:focus {
